# ros-codes

./: README.md
bagfiles/: 2018-04-06-06-22-41.bag
catkin_ws/: params.yaml
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
catkin_ws/devel/.private/beginner_tutorials/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/client_srv_pub_sub/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/.private/my_custom_message/: .catkin  .rosinstall  setup.sh
catkin_ws/logs/beginner_tutorials/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.cmake.002.log.stderr
catkin_ws/logs/client_srv_pub_sub/: build.check.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr
catkin_ws/logs/my_custom_message/: build.check.000.log.stderr  build.check.002.log.stderr  build.check.004.log.stderr
catkin_ws/logs/my_pub_sub/: build.check.000.log.stderr  build.cmake.001.log.stderr  build.cmake.002.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr
catkin_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
catkin_ws/src/client_srv_pub_sub/: CMakeLists.txt  package.xml
catkin_ws/src/my_custom_message/: CMakeLists.txt
catkin_ws/src/my_custom_message/msg/: str_msg.msg
catkin_ws/src/my_pub_sub/: CMakeLists.txt  package.xml
(+150 files in other folders)
